# deburring_diffusion

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  REAME.md  devcontainer.json  setup.sh
examples/: traj_generator_multiple_configurations_to_multiple_poses.py  traj_generator_multiple_configurations_to_single_pose.py  traj_generator_single_configuration_to_single_pose.py
examples/visualization/: eval_meshcat.py  eval_plot.py  traj_vis.py
results/traj_generator/: single_configuration_single_single_pose.json
scripts/: train.sh
scripts/config/: diffusion_config.yml
src/deburring_diffusion/: visualizer.py
src/deburring_diffusion/diffusion/: conditioning.py  dataset.py  diffusion_motion.py  model.py  train.py
src/deburring_diffusion/robot/: curobo_utils.py  panda_env_loader.py  traj_gen_utils.py  visualization_utils.py
tests/: conftest.py  test_dataset.py
utils/: stl_to_obj.py
