[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
authors = [{ name = "Arthur Haffemayer", email = "arthur.haffemayer@gmail.com" }]
name = "deburring_diffusion"
version = "0.1.0"
description = "Panda robot following an path obtained through diffusion to do a deburring motion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colmpc>=0.3.0",
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "matplotlib>=3.9.4",
    "meshcat>=0.3.2",
    "robomeshcat>=1.1.4",
    "example-robot-data-loaders",
    "natsort>=8.4.0",
    "proxsuite!=0.7.2.post1",
    "pytorch-lightning>=2.5.5",
    "torch>=2.5.0", 
    "torchvision>=0.20.0",  
    "jsonargparse[signatures]>=4.27.7",
]